--- a/design/style.css
+++ b/design/style.css
@@ -1,239 +1,216 @@
 @import url("https://fonts.googleapis.com/css2?family=Dongle:wght@300&display=swap");
 
-    @import url("https://fonts.googleapis.com/css2?family=Asap:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Asap:wght@700&display=swap");
 
-    @import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
 
-    :root {
-      --UkFont: 22px;
-      --Uk20px: 20px;
-      --Uk10px: 10px;
-      --Uk14px: 14px;
-      --font-Dongle: Dongle;
-    }
+:root {
+  --UkFont: 22px;
+  --Uk20px: 20px;
+  --Uk10px: 10px;
+  --Uk14px: 14px;
+  --Uk12px: 12px;
+  --font-Dongle: Dongle;
+  --int-100: 100%;
+  --warnaHitam: black;
+}
 
-    body {
-      width: 100%;
-      height: 100vh;
-      overflow-x: hidden;
-    }
+body {
+  width: 100%;
+  height: 100vh;
+  overflow-x: hidden;
+}
 
-    .title {
-      font-family: "Asap", sans-serif;
-      font-size: var(--Uk20px);
-      text-align: center;
-      margin-bottom: var(--Uk10px);
-    }
+.title {
+  font-family: "Asap", sans-serif;
+  font-size: var(--Uk20px);
+  text-align: center;
+  margin-bottom: var(--Uk10px);
+}
 
-    /* NAVBAR */
-    nav {
-      background-color: #4494ff;
-      height: 40px;
-      width: auto;
-      box-shadow: 0px -1px var(--Uk14px) 0px rgba(0, 0, 0, 1)
-    }
+/* NAVBAR */
+nav {
+  background-color: #4494ff;
+  height: 40px;
+  width: auto;
+  box-shadow: 0px -1px var(--Uk14px) 0px rgba(0, 0, 0, 1)
+}
 
-    .logo {
-      padding: 0 5rem;
-    }
+.logo {
+  padding: 0 5rem;
+}
 
-    .logo img {
-      width: 80%;
-      height: 40px;
-    }
+.logo img {
+  width: 80%;
+  height: 40px;
+}
 
-    nav ul {
-      float: right;
-      margin: 0;
-      padding: 0;
-      margin-right: var(--Uk20px);
-    }
+nav ul {
+  float: right;
+  margin: 0;
+  padding: 0;
+  margin-right: var(--Uk20px);
+}
 
-    nav ul li {
-      display: inline-block;
-      padding-top: 6px;
-      margin: 0 8px;
-    }
+nav ul li {
+  display: inline-block;
+  padding-top: 6px;
+  margin: 0 8px;
+}
 
-    nav ul li a {
-      color: black;
-      font-size: var(--Uk14px);
-      font-weight: bold;
-      padding: 4px 16px;
-      border-radius: 3px;
-      text-transform: uppercase;
-      text-decoration: none;
-    }
+nav ul li a {
+  color: black;
+  font-size: var(--Uk14px);
+  font-weight: bold;
+  padding: 4px 16px;
+  border-radius: 3px;
+  text-transform: uppercase;
+  text-decoration: none;
+}
 
-    a.active,
-    a:hover {
-      background: rgb(49, 68, 160, 0.4);
-      transition: 0.2s;
-    }
+a.active,
+a:hover {
+  background: rgb(49, 68, 160, 0.4);
+  transition: 0.2s;
+}
 
-    .container {
-      width: 100%;
-    }
-
-    .container .row label {
-      font-family: "Asap", sans-serif;
-      text-align: left;
-      font-size: var(--Uk14px);
-    }
-
-    .bodyJudul {
-      padding: 0;
-      margin: 0;
-      text-align: center;
-      width: 100%;
-      font-size: 22px;
-    }
-
-    input[type="text"] {
-      width: 250px;
-      display: block;
-      height: 28px;
-      font-size: var(--UkFont);
-      font-family: var(--font-Dongle);
-      padding-top: var(--Uk10px);
-      margin-bottom: 4px;
-    }
-
-    label {
-      font-size: var(--UkFont);
-      font-family: var(--font-Dongle);
-    }
-
-    .btnsubmit .btn {
-      background-color: rgb(163, 163, 163);
-      margin-top: 2rem;
-      margin-bottom: 2rem;
-      width: auto;
-      font-weight: bold;
-    }
-
-    .btnsubmit .btn:hover {
-      background-color: rgb(87, 87, 87);
-      transform: scale(1.05);
-    }
-
-    #confirm {
-      right: 0;
-      margin-left: 40%;
-      margin-right: 40%;
-      top: calc(110% - 50%);
-      position: absolute;
-      display: none;
-    }
-
-    #confirm:target {
-      visibility: visible;
-      display: block;
-    }
-
-    .message {
-      position: relative;
-      background: #ff0000;
-      font-size: var(--Uk20px);
-      font-family: var(--font-Dongle);
-      font-weight: bold;
-      padding-left: var(--Uk10px);
-      margin-right: var(--Uk10px);
-      width: 100%;
-      z-index: 41;
-      color: white;
-      -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
-      -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
-      box-shadow: 0 0 var(--Uk10px) rgba(254, 21, 21, 0.4);
-    }
-
-    footer {
-      position: fixed;
-      left: 0;
-      bottom: 0;
-      width: 100%;
-      background-color: #4494ff;
-      color: black;
-      text-align: center;
-      font-weight: bolder;
-      font-size: var(--Uk10px);
-    }
-
-    /* MODAL */
-    span {
-      display: inline-block;
-      width: auto;
-      padding: 5px;
-      font-weight: bolder;
-    }
-
-    .bodySpan {
-      position: relative;
-    }
-
-    .modal-header button {
-      font-size: 12px;
-    }
-
-    .modal-body .col-sm {
-      margin: 0 auto;
-      text-align: center;
-    }
-
-    .modal-footer {
-      margin: 0 auto;
-      text-align: center;
-      font-size: 12px; 
-    }
+.container {
+  width: 100%;
+}
 
 
-    .modal-body input[type="text"] {
-      width: 140px;
-      display: block;
-      height: 28px;
-      font-size: var(--UkFont);
-      font-family: var(--font-Dongle);
-      padding-top: var(--Uk10px);
-      margin-bottom: 4px;
-      padding-right: 10px;
-    }
+.btnsubmit .btn {
+  background-color: rgb(163, 163, 163);
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  width: auto;
+  font-weight: bold;
+}
 
-    @media screen and (max-width: 950px) {
+.btnsubmit .btn:hover {
+  background-color: rgb(87, 87, 87);
+  transform: scale(1.05);
+}
 
-      nav ul li a {
-        font-size: 16px;
-      }
-    }
+#confirm {
+  right: 0;
+  margin-left: 40%;
+  margin-right: 40%;
+  top: calc(110% - 50%);
+  position: absolute;
+  display: none;
+}
 
-    @media screen and (max-width: 850px) {
-      ul {
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: #2c3e50;
-        top: 80px;
-        left: 100%;
-        text-align: center;
-        transition: all 0.5s;
-      }
+#confirm:target {
+  visibility: visible;
+  display: block;
+}
 
-      nav ul li {
-        display: block;
-        margin: 50px 0;
-        line-height: 30px;
-      }
+.message {
+  position: relative;
+  background: #ff0000;
+  font-size: var(--Uk20px);
+  font-family: var(--font-Dongle);
+  font-weight: bold;
+  padding-left: var(--Uk10px);
+  margin-right: var(--Uk10px);
+  width: 100%;
+  z-index: 41;
+  color: white;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 0 var(--Uk10px) rgba(254, 21, 21, 0.4);
+}
 
-      nav ul li a {
-        font-size: var(--Uk20px);
-      }
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #4494ff;
+  color: black;
+  text-align: center;
+  font-weight: bolder;
+  font-size: var(--Uk10px);
+}
 
-      a:hover,
-      a.active {
-        background: none;
-        color: #0082e6;
-      }
+/* input-SBiller */
+.input-SBiller {
+  position: relative;
+  margin-bottom: 26px;
+}
 
-      #check:checked~ul {
-        left: 0;
-      }
-    }
+.input-SBiller label {
+  position: absolute;
+  top: 0px;
+  left: 8px;
+  font-size: var(--Size14px);
+  font-weight: bold;
+  color: #0000009f;
+  pointer-events: none;
+  transition: all 0.5s ease-in-out;
+}
+
+.input-SBiller input {
+  border: 0;
+  border-bottom: 2px solid #00000059;
+  background: transparent;
+  width: var(--int-100);
+  padding: 2px 0 2px 6px;
+  font-size: var(--Uk14px);
+  color: var(--warnaHitam);
+  font-weight: bolder;
+}
+
+.input-SBiller input:focus {
+  border: none;
+  outline: none;
+  border-bottom: 1px solid var(--warnaHitam);
+}
+
+.input-SBiller input:focus~label,
+.input-SBiller input:valid~label {
+  top: -18px;
+  font-size: var(--Uk12px);
+  color: #00000086;
+  font-weight: bolder;
+}
+
+@media screen and (max-width: 950px) {
+  nav ul li a {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  ul {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #2c3e50;
+    top: 80px;
+    left: 100%;
+    text-align: center;
+    transition: all 0.5s;
+  }
+
+  nav ul li {
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+  }
+
+  nav ul li a {
+    font-size: var(--Uk20px);
+  }
+
+  a:hover,
+  a.active {
+    background: none;
+    color: #0082e6;
+  }
+
+  #check:checked~ul {
+    left: 0;
+  }
+}
