--- a/style.css
+++ b/style.css
@@ -15,167 +15,68 @@
 }
 
 body {
-  width: 100%;
-  height: 100vh;
-  overflow-x: hidden;
+    background: #f5f7fa;
+    font-family: 'Segoe UI', sans-serif;
 }
 
-body .container {
-  position: relative;
+nav {
+    background: #1e88e5;
+    padding: 15px 30px;
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
 }
-
-body .container::after {
-  position: absolute;
-  content: "";
-  background: var(--background) 30%;
-  background-size: 100px 60px;
-  right: 0;
-  bottom: 0px;
-  width: 100px;
-  height: calc(100% - 50vh);
-  filter: blur(1px);
-}
-
 
 .title {
-  font-family: "Asap", sans-serif;
-  font-size: var(--Uk20px);
-  text-align: center;
-  margin-bottom: 2rem;
+    font-size: 22px;
+    font-weight: bold;
+    margin-bottom: 15px;
+    color: #1e88e5;
 }
 
-/* NAVBAR */
-nav {
-  background-color: #026efc;
-  height: 40px;
-  width: auto;
-  box-shadow: 0px -1px var(--Uk14px) 0px rgba(0, 0, 0, 1)
+.card-panel {   
+    border-radius: 14px;
+    padding: 25px;
+    margin-bottom: 2px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.08);
 }
 
-.logo {
-  padding: 0 5rem;
-}
-
-.logo img {
-  width: 80%;
-  height: 40px;
-}
-
-nav ul {
-  float: right;
-  margin: 0;
-  padding: 0;
-  margin-right: var(--Uk20px);
-}
-
-nav ul li {
-  display: inline-block;
-  padding-top: 6px;
-  margin: 0 8px;
-}
-
-nav ul li a {
-  color: rgb(255, 255, 255);
-  font-size: var(--Uk14px);
-  font-weight: bold;
-  padding: 4px 16px;
-  border-radius: 3px;
-  text-transform: uppercase;
-  text-decoration: none;
-  ;
-}
-
-/* input-SBiller */
 .input-SBiller {
-  position: relative;
-  margin-bottom: 26px;
-}
-
-.input-SBiller label {
-  position: absolute;
-  top: 0px;
-  left: 8px;
-  font-size: var(--Size14px);
-  font-weight: bold;
-  color: #0000009f;
-  pointer-events: none;
-  transition: all 0.5s ease-in-out;
+    position: relative;
+    margin-bottom: 6px;
 }
 
 .input-SBiller input {
-  border: 1px solid rgba(0, 0, 0, 0.363);
-  /* border-bottom: 2px solid #00000059; */
-  background: transparent;
-  width: 250px;
-  padding: 2px 0 2px 6px;
-  font-size: var(--Uk14px);
-  color: var(--warnaHitam);
-  font-weight: bolder;
+    border-radius: 10px;
+    padding: 12px;
+    border: 1px solid #cfd8dc;
 }
 
-.input-SBiller input:focus~label,
-.input-SBiller input:valid~label {
-  top: -20px;
-  font-size: var(--Uk12px);
-  color: #00000086;
-  font-weight: bolder;
+.input-SBiller label {
+    font-size: 14px;
+    margin-top: 5px;
+    font-weight: bolder;
+    color: #455a64;
 }
 
 .btnsubmit .btn {
-  background-color: rgb(0, 9, 138);
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-  width: auto;
-  font-weight: bold;
-  color: white;
+    background: #1e88e5;
+    color: white;
+    padding: 12px 40px;
+    border-radius: 30px;
+    font-size: 18px;
+    margin-top: 25px;
 }
 
-.btnsubmit .btn:hover {
-  background-color: rgb(2, 16, 207);
-  transform: scale(1.03);
-  color: white;
-}
-
-#confirm {
-  right: 0;
-  margin-left: 40%;
-  margin-right: 40%;
-  top: calc(110% - 50%);
-  position: absolute;
-  display: none;
-}
-
-#confirm:target {
-  visibility: visible;
-  display: block;
-}
-
-.message {
-  position: relative;
-  background: #ff0000;
-  font-size: var(--Uk20px);
-  font-family: var(--font-Dongle);
-  font-weight: bold;
-  padding-left: var(--Uk10px);
-  margin-right: var(--Uk10px);
-  width: 100%;
-  z-index: 41;
-  color: white;
-  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
-  -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
-  box-shadow: 0 0 var(--Uk10px) rgba(254, 21, 21, 0.4);
+.btn:hover {
+    background: #1565c0;
 }
 
 footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  /* background-color: #4494ff; */
-  color: rgba(0, 0, 0, 0.479);
-  text-align: center;
-  font-weight: bolder;
-  font-size: var(--Uk10px);
+    text-align: center;
+    margin-top: 2px;
+    padding: 12px;
+    color: #666;
 }
 
 
