--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ nav {
     font-weight: bold;
 }
 
+.container { 
+    max-height: 100vh;
+}
+
 .title {
     font-size: 22px;
     font-weight: bold;
@@ -27,20 +31,20 @@ nav {
 }
 
 .input-SBiller,
-input-SBiller_NonHide {
+.input-SBiller_NonHide {
     position: relative;
     margin-bottom: 6px;
 }
 
 .input-SBiller input,
-input-SBiller_NonHide input {
+.input-SBiller_NonHide input {
     border-radius: 10px;
     padding: 12px;
     border: 1px solid #cfd8dc;
 }
 
 .input-SBiller label,
-input-SBiller_NonHide label {
+.input-SBiller_NonHide label {
     font-size: 14px;
     margin-top: 5px;
     font-weight: bolder;
@@ -53,6 +57,7 @@ input-SBiller_NonHide label {
     padding: 12px 40px;
     border-radius: 30px;
     font-size: 18px;
+	font-weight: bold;
     margin-top: 25px;
 }
 
@@ -62,9 +67,13 @@ input-SBiller_NonHide label {
 
 footer {
     text-align: center;
-    margin-top: 2px;
-    padding: 12px;
     color: #666;
+	font-size : 12px;
+	font-weight: bold;
+	margin-top: 20px;
+    bottom: 0;
+    left: 0;
+    width: 100%;
 }
 
 
